<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1920dp"
    android:layout_height="1080dp"
    android:background="@drawable/select_carriage_head_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/str_select_carriage_head_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_48"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
    </TextView>

    <ImageView
        android:layout_width="1824dp"
        android:layout_height="281dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="403dp"
        android:background="@drawable/select_carriage_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_carriage_mc1"
        android:layout_width="529dp"
        android:layout_height="188dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="402dp"
        android:background="@drawable/select_carriage_mc1"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_carriage_mc2"
        android:layout_width="529dp"
        android:layout_height="188dp"
        android:layout_marginEnd="129dp"
        android:layout_marginTop="402dp"
        android:background="@drawable/select_carriage_mc2"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="400dp"
        android:layout_marginBottom="50dp"
        android:text="@string/carriage_mc1_def"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_carriage_mc1" >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/carriage_t_def"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_carriage_mc1" >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="400dp"
        android:text="@string/carriage_mc2_def"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_carriage_mc1" >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="310dp"
        android:text="@string/str_select_carriage_head_des"
        android:textColor="@color/white_transparent_two"
        android:textSize="@dimen/sp_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >
    </TextView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="v_confirm_bg,v_confirm_carriage_head_bg,tv_confirm_msg,
        tv_set_button,tv_cancel_button" />

    <View
        android:id="@+id/v_confirm_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent" />

    <View
        android:id="@+id/v_confirm_carriage_head_bg"
        android:layout_width="744dp"
        android:layout_height="390dp"
        android:background="@drawable/confirm_carriage_head_bg"
        android:layout_marginTop="345dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_confirm_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/systemui_content_textview_define_30_white"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="@id/v_confirm_carriage_head_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_set_button"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        style="@style/systemui_content_textview_define_30_white"
        android:text="@string/str_select_carriage_head_confirm_set_msg"
        android:background="@drawable/confirm_carriage_head_set_bg"
        app:layout_constraintBottom_toBottomOf="@id/v_confirm_carriage_head_bg"
        app:layout_constraintStart_toStartOf="@id/v_confirm_carriage_head_bg" />

    <TextView
        android:id="@+id/tv_cancel_button"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        style="@style/systemui_content_textview_define_30_white"
        android:text="@string/str_select_carriage_head_confirm_cancel_msg"
        android:background="@drawable/confirm_carriage_head_cancel_bg"
        app:layout_constraintBottom_toBottomOf="@id/v_confirm_carriage_head_bg"
        app:layout_constraintEnd_toEndOf="@id/v_confirm_carriage_head_bg" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="v_load_bg,iv_load,tv_load" />

    <View
        android:id="@+id/v_load_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_backgroud" />

    <ImageView
        android:id="@+id/iv_load"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/select_carriage_head_load"
        android:layout_marginTop="453dp"
        app:layout_constraintTop_toTopOf="@id/v_load_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/systemui_content_textview_define_30_white"
        android:layout_marginTop="48dp"
        android:text="@string/str_select_carriage_head_load"
        app:layout_constraintTop_toBottomOf="@id/iv_load"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>